--- a/CaJoue/package.json
+++ b/CaJoue/package.json
@@ -10,16 +10,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-maps": "^0.30.1",
-    "react-native-web": "0.17.1"
+    "react-native-maps": "0.29.4",
+    "react-native-open-maps": "^0.4.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-web": "0.17.1",
+    "expo-updates": "~0.11.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "json-loader": "^0.5.7"
   },
   "private": true
 }
